--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+#page-container {
+  position: relative;
   min-height: 100vh;
+}
+
+#content-wrapper {
+  padding-bottom: 2.5rem;
+  font-family: monospace;
+}
+
+#header {
+  background-color: lemonchiffon;
+  color: cornflowerblue;
+  padding: 3em 0 3em 0;
+  margin: 0;
+  text-align: center;
+  top: 0;
+}
+
+#footer {
+  background-color: lavenderblush;
+  padding: 2em;
+  color: maroon;
+  position: fixed;
+  width: 100%;
+  height: 2.5rem;
+  bottom: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 0;
+  padding: 2em 0 2em 0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+  background-color: lavender;
+  align-items: center;
+  padding: 1em 0 1em 0;
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
