--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 }
 
 #header {
-  background-color: lemonchiffon;
-  color: cornflowerblue;
+  background-color: rgb(53, 31, 31);
+  color: navajowhite;
   padding: 3em 0 3em 0;
   margin: 0;
   text-align: center;
@@ -18,9 +18,9 @@
 }
 
 #footer {
-  background-color: lavenderblush;
-  padding: 2em;
-  color: maroon;
+  background-color: rgb(53, 31, 31);
+  color: honeydew;
+  font-size: 18px;
   position: fixed;
   width: 100%;
   height: 2.5rem;
@@ -29,17 +29,37 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding: 2em 0 2em 0;
+  padding: 1em 0 1em 0;
 }
 
 .navbar {
   display: flex;
   justify-content: center;
   justify-content: space-evenly;
-  background-color: lavender;
+  background-color: navajowhite;
   align-items: center;
   padding: 1em 0 1em 0;
   position: relative;
   font-size: 1.5rem;
   font-weight: bolder;
+}
+
+.homepage-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 5em;
+}
+
+.homepage {
+  margin-top: 5em;
+  min-width: 10em;
+  min-height: 10em;
+  border-radius: 50%;
+  background-color: crimson;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
