--- a/src/Components/FlashCards/FlashCards.css
+++ b/src/Components/FlashCards/FlashCards.css
@@ -13,6 +13,16 @@
     font-size: 24px;
     padding: 2em 1em 2em 1em;
     border-right: 2px solid ghostwhite;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.new-button {
+    padding: 1em 0 1em 0;
+    background-color: rgb(53, 36, 15);
+    color: moccasin;
+    font-size: 24px;
 }
 
 .detail {
@@ -32,4 +42,23 @@
     font-size: 16px;
     background-color: brown;
     color: cornsilk;
+}
+
+.form-view {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding: 4em 0 0 4em;
+    background-color: darkkhaki;
+    color: ghostwhite;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.inputbox {
+   margin-top: 1em;
+   margin-bottom: 1em;
+   display: flex;
+   flex-direction: column;
 }
