--- a/src/Components/FlashCards/FlashCards.css
+++ b/src/Components/FlashCards/FlashCards.css
@@ -19,10 +19,12 @@
 }
 
 .new-button {
-    padding: 1em 0 1em 0;
-    background-color: rgb(53, 36, 15);
+    padding: 0.2em 0 0.2em 0;
+    margin: 0 6em 0 6em;
+    background-color: darkslategray;
     color: moccasin;
     font-size: 24px;
+    outline: none;
 }
 
 .detail {
@@ -40,7 +42,7 @@
     padding-bottom: 3em;
     margin: 1.5em;
     font-size: 16px;
-    background-color: brown;
+    background-color: darkslategray;
     color: cornsilk;
 }
 
@@ -50,7 +52,7 @@
     align-items: flex-start;
     justify-content: space-evenly;
     padding: 4em 0 0 4em;
-    background-color: darkkhaki;
+    background-color: rgb(78, 12, 51);
     color: ghostwhite;
     font-size: 18px;
     font-weight: bolder;
@@ -64,11 +66,19 @@
 }
 
 .link {
-    color: white;
+    color: rgb(78, 12, 51);
     text-decoration: none;
 }
 
 .link:hover {
+    color: rgb(100, 86, 5);
+}
+
+.headword-link {
+    color: cornsilk;
+}
+
+.headword-link:hover {
     color: gold;
 }
 
@@ -79,12 +89,20 @@
 }
 
 .card-on-view-wrapper {
-    border: 4px solid mintcream;
+    border: 4px solid palevioletred;
     box-sizing: border-box;
     padding: 2em;
-    background-color: rgb(83, 51, 3);
-    color: navajowhite;
+    background-color: powderblue;
+    color: rgb(17, 17, 78);
     font-size: 20px;
     font-weight: bolder;
     margin-top: 4em;
+}
+
+.reveal-button {
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 1em;   
+    margin-top: 2em;
+    float: right;
 }
